# GoPieMenu

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  installer.iss
.github/workflows/: windows-release.yml
resources/: resources.qrc  windows_icon.rc
src/: main.cpp
src/core/: ActionExecutor.cpp  ActionExecutor.h  ConfigManager.cpp  ConfigManager.h  HookManager.cpp  HookManager.h  IActionHandler.h  IConfigProvider.h  IHookProvider.h
src/core/actions/: LaunchAppAction.cpp  LaunchAppAction.h  OpenFileAction.cpp  OpenFileAction.h  OpenURLAction.cpp  OpenURLAction.h  RunCommandAction.cpp  RunCommandAction.h  SendHotkeyAction.cpp  SendHotkeyAction.h
src/models/: AppConfig.h  PieItem.h  PieMenuConfig.h  StyleConfig.h  Types.h
src/ui/: PieMenuWidget.cpp  PieMenuWidget.h  SettingsWindow.cpp  SettingsWindow.h  TrayManager.cpp  TrayManager.h
src/ui/widgets/: ColorPickerButton.cpp  ColorPickerButton.h  HotkeyRecorder.cpp  HotkeyRecorder.h  IconPickerDialog.cpp  IconPickerDialog.h  ListMenuWidget.cpp  ListMenuWidget.h  PiePreviewWidget.cpp  PiePreviewWidget.h  WindowPickerDialog.cpp  WindowPickerDialog.h
